ui: fix header spacing on mobile

--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -8,7 +8,6 @@
   text-transform: uppercase;
   letter-spacing: 1px;
   padding: 20px 0px;
-  border-bottom: 10px solid $color-yellow;
   width: 100%;
   z-index: $zIndex-10;
   background-color: $color-white;
