--- a/src/style/components/SubHeader.scss
+++ b/src/style/components/SubHeader.scss
@@ -8,6 +8,7 @@
 
   .left {
     float: left;
+		padding-top: 5px;
     .title {
       float: left;
       line-height: 60px;
@@ -38,6 +39,7 @@
   .right {
     float: right;
     height: 70px;
+		padding-top: 10px;
     padding-right: 20px;
 
     .follow {
